# ServerPortfolio

./: .gitignore  CMakeLists.txt  README.md  taylor.sln
Core/: Core.vcxproj  Core.vcxproj.filters
Core/include/: stdafx.h
Core/include/FbIdl/: packet.fbs
Core/include/Network/: Client.h  Connection.h  Parser.h  Server.h
Core/src/Network/: Client.cpp  Connection.cpp  Parser.cpp  Server.cpp
CoreTest/: CoreTest.vcxproj  CoreTest.vcxproj.filters
CoreTest/include/: targetver.h
CoreTest/src/: CoreTest.cpp  stdafx.cpp
CoreTest/src/Network/: ParsetTest.cpp
TestClient/: TestClient.vcxproj  TestClient.vcxproj.filters
TestClient/src/: TestClient.cpp
TestServer/: TestServer.vcxproj  TestServer.vcxproj.filters
TestServer/include/: targetver.h
TestServer/src/: TestServer.cpp
